# strategic_consultant

./: .env.example  .gitignore  CLAUDE.md  LANGGRAPH_AMBIENT_AGENT_REFERENCE.md  PRD.md  langgraph.json  main.py  pyproject.toml
plan/: 00_overview.md  01_project_setup.md  02_state_and_schemas.md  03_memory_system.md  04_tools.md  05_main_graph_nodes.md  06_research_subgraph.md  07_report_subgraph.md  08_hitl_gates.md  09_prompts.md  10_langgraph_config_and_testing.md
src/strategic_analyst/: __init__.py  configuration.py  main_graph.py  memory.py  prompts.py  schemas.py
src/strategic_analyst/nodes/: context_loader.py  hitl_gates.py  memory_writer.py  planner.py  report_saver.py
src/strategic_analyst/subgraphs/report/: report_graph.py  supervisor.py  writer_agent.py
src/strategic_analyst/subgraphs/research/: research_graph.py  supervisor.py  task_agent.py
src/strategic_analyst/tools/: __init__.py  base.py  memory_tools.py  question_tool.py  rag_tool.py  web_search_tool.py
tests/: conftest.py  test_context_loader.py  test_hitl.py  test_integration.py  test_memory.py  test_schemas.py
